--- a/application-eureka.yml
+++ b/application-eureka.yml
@@ -1,4 +1,4 @@
 eureka:
   client:
     service-url:
-      default-zone: http://localhost:8761/eureka
+      defaultZone: http://localhost:18761/eureka
