--- a/application/application-eureka.yml
+++ b/application/application-eureka.yml
@@ -2,4 +2,4 @@ eureka:
   client:
     enabled: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: ${EUREKA_DEFAULT_ZONE_URL:http://localhost:8761/eureka}
