--- a/application/application-service-url.yml
+++ b/application/application-service-url.yml
@@ -1,7 +1,7 @@
 service:
   censoring-text:
-    url: http://localhost:8028
+    url: ${CENSORING_TEXT_SERVICE_URL}
   publication-text-service:
-    url: http://localhost:8008
+    url: ${PUBLICATION_TEXT_SERVICE_URL}
   rating-text-service:
-    url: http://localhost:8018
+    url: ${RATING_TEXT_SERVICE_URL}
