--- a/infrastructure/eureka-server/application.yml
+++ b/infrastructure/eureka-server/application.yml
@@ -2,9 +2,13 @@ server:
   port: ${EUREKA_SERVER_PORT:8761}
 
 eureka:
+  instance:
+    hostname: ${EUREKA_SERVER_HOST}
   client:
     register-with-eureka: false
     fetch-registry: false
+    service-url:
+      defaultZone: ${EUREKA_DEFAULT_ZONE_URL:${EUREKA_SERVER_URL}/eureka}
 
 management:
   endpoints:
